# prose

./: .flake8  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/prose/: __init__.py  env.py  exceptions.py  main.py  template.py
tests/: conftest.py  test_prose.py
