[tool.poetry]
name = "prose"
version = "0.1.1"
description = "Initialize projects from predefined templates which support flake8, black, mypy and others."
authors = ["Łukasz <l.ambroziak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.scripts]
prose = "prose.prose:main"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
mypy = "^0.790"
flake8-annotations = "^2.4.1"
typeguard = "^2.10.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.5"
xdoctest = "^0.15.0"
sphinx = "^3.3.0"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.10"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["prose"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
